--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -47,12 +47,38 @@
                     <li data-uk-filter-control=".tarea-card"><a href="#">Tareas</a></li>
                     <li data-uk-filter-control=".nivel-card "><a href="#">Asignación de nivel</a></li>
                 </ul>
-                <div class="contenedor-imagen-alumnos uk-margin-small-bottom uk-margin-small-top">
-                    <h:graphicImage styleClass="uk-visible@s nino" library="img" name="/avatar/astronauta-nino.svg" />
-                    <div>
-                        <span>Nombre: ${tareaAlumnoControlador.alumnoModelo.nombre.concat(' ').concat(tareaAlumnoControlador.alumnoModelo.apellidoPaterno).concat(' ').concat(tareaAlumnoControlador.alumnoModelo.apellidoMaterno)}</span>
-                        <span>Apodo: ${tareaAlumnoControlador.alumnoModelo.apodo}</span>
-                        <span>Nivel Lenguaje: ${tareaAlumnoControlador.alumnoModelo.nivelLenguajeModelo.valor}</span>
+                <div class="uk-width-1-3@m uk-first-column">
+                    <div class="uk-card uk-card-default uk-card-small color-card-four margen-one">
+                        <div class="uk-card-header border-card">
+                            <div class="uk-grid-small uk-flex-middle uk-grid" uk-grid="">
+                                <div class="uk-width-auto">
+                                    <h:graphicImage styleClass="uk-visible@s nino" library="img" name="/avatar/astronauta-nino.svg" />
+                                </div>
+                                <div class="uk-width-expand">
+                                    <h3 class="uk-card-title uk-margin-remove-bottom uk-text-small uk-text-uppercase uk-text-bold">
+                                        ${tareaAlumnoControlador.alumnoModelo.nombre.concat(' ').concat(tareaAlumnoControlador.alumnoModelo.apellidoPaterno).concat(' ').concat(tareaAlumnoControlador.alumnoModelo.apellidoMaterno)}
+                                    </h3>
+                                    <p class="uk-text-meta uk-margin-remove-top uk-text-small">
+                                        <span>${tareaAlumnoControlador.alumnoModelo.apodo}</span>
+                                        <span>${tareaAlumnoControlador.alumnoModelo.nivelLenguajeModelo.valor}</span>
+                                    </p>
+                                </div>
+                                <div class="uk-width-1-1@s">
+                                    <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">Apodo:</span> jonhas</p>
+                                    <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">Email:</span> manzanilla@gmail.com</p>
+                                    <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">Nivel de Lenguaje:</span> A1</p>
+                                    <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small"><span class="uk-text-bold uk-text-primary"></span>Editar Perfil:</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="uk-card-body padding-card-body">
+                            <h3 class="uk-text-uppercase uk-text-bold">question?</h3>
+                            <p>We've got answers!<span class="uk-text-primary"> Contact Us</span></p>
+                        </div>
+                        <div class="uk-card-footer">
+                            <h3 class="uk-text-uppercase uk-text-bold">Teacher Training</h3>
+                            <p>Learn more with our free<span class="uk-text-primary">e-squadron courses!</span></p>
+                        </div>
                     </div>
                 </div>
                 <!--CARDS WRAPPER-->
