--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -67,17 +67,18 @@
                                     <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">Apodo:</span> jonhas</p>
                                     <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">Email:</span> manzanilla@gmail.com</p>
                                     <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">Nivel de Lenguaje:</span> A1</p>
-                                    <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small"><span class="uk-text-bold uk-text-primary"></span>Editar Perfil:</p>
+                                    <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small"><span class="uk-text-bold uk-text-primary">Editar Perfil:</span></p>
                                 </div>
                             </div>
                         </div>
                         <div class="uk-card-body padding-card-body">
-                            <h3 class="uk-text-uppercase uk-text-bold">question?</h3>
-                            <p>We've got answers!<span class="uk-text-primary"> Contact Us</span></p>
+                            <h3 class="uk-text-uppercase uk-text-bold">grupo</h3>
+                            <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">Grado:</span> 1°</p>
+                            <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">Grupo:</span> B</p>
                         </div>
                         <div class="uk-card-footer">
                             <h3 class="uk-text-uppercase uk-text-bold">Teacher Training</h3>
-                            <p>Learn more with our free<span class="uk-text-primary">e-squadron courses!</span></p>
+                            <p>Learn more with our free<span class="uk-text-primary"> e-squadron courses!</span></p>
                         </div>
                     </div>
                 </div>
