--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -47,7 +47,7 @@
                     <li data-uk-filter-control=".tarea-card"><a href="#">Tareas</a></li>
                     <li data-uk-filter-control=".nivel-card "><a href="#">Asignación de nivel</a></li>
                 </ul>
-                <div class="uk-width-1-3@m uk-first-column">
+                <div class="uk-width-1-3@m uk-first-column uk-margin-bottom">
                     <div class="uk-card uk-card-default uk-card-small color-card-four margen-one">
                         <div class="uk-card-header border-card">
                             <div class="uk-grid-small uk-flex-middle uk-grid" uk-grid="">
@@ -75,10 +75,6 @@
                             <h3 class="uk-text-uppercase uk-text-bold">grupo</h3>
                             <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">Grado:</span> 1°</p>
                             <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">Grupo:</span> B</p>
-                        </div>
-                        <div class="uk-card-footer">
-                            <h3 class="uk-text-uppercase uk-text-bold">Teacher Training</h3>
-                            <p>Learn more with our free<span class="uk-text-primary"> e-squadron courses!</span></p>
                         </div>
                     </div>
                 </div>
